# zamp

./: .gitignore  README.md
projekt_ms/: kompilacja.txt
projekt_ms/package-interp4cmds-2libs/: README
projekt_ms/package-interp4cmds-2libs/inc/: AbstractComChannel.hh  AbstractScene.hh  ComChannel.hh  Configuration.hh  Interp4Color.hh  Interp4Rotate.hh  Interp4Scale.hh  Interp4Set.hh  LibInterface.hh  Makefile.am  ProgramInterpreter.hh  Vector3D.hh  geomVector.hh  xmlinterp.hh
projekt_ms/package-interp4cmds-2libs/src/: ComChannel.cpp  LibInterface.cpp  Makefile.am  ProgramInterpreter.cpp  Set4LibInterfaces.cpp
projekt_ms/package-interp4cmds-2libs/src-lib/: Interp4Scale.cpp  Interp4Set.cpp  Makefile.am
projekt_ms/projekt/: interp
projekt_ms/projekt/config/: config.xml
projekt_ms/projekt/inc/: AbstractInterp4Command.hh  AbstractMobileObj.hh  Cuboid.hh  Scene.hh  Set4LibInterfaces.hh
projekt_ms/projekt/plugin/inc/: Interp4Move.hh  Interp4Pause.hh
projekt_ms/projekt/plugin/src/: Interp4Color.cpp  Interp4Move.cpp  Interp4Pause.cpp  Interp4Rotate.cpp
projekt_ms/projekt/src/: Scene.cpp  commands.cmds  main.cpp  xmlinterp.cpp
projekt_ms/serwer-graficzny-Qt6-cmake-v1_3_1/: CMakeLists.txt  CZYTAJ.TO  ZMIANY.txt
projekt_ms/serwer-graficzny-Qt6-cmake-v1_3_1/libQGLViewer/: CMakeLists.txt.org
projekt_ms/serwer-graficzny-Qt6-cmake-v1_3_1/serwer_zrodla/: CMakeLists.txt  serwer_graficzny
projekt_ms/serwer-graficzny-Qt6-cmake-v1_3_1/serwer_zrodla/inc/: gsv-AppParams.hh  gsv-BackgroundUtils.hh  gsv-GeomParams.hh  gsv-Map4DescGeomObjs.hh  gsv-Map4SceneGeomObjs.hh  gsv-Scene.hh  gsv-ServerCommand.hh  gsv-Utils.hh  gsv-Vector3-Utils.hh  gsv-Vector3d.hh  gsv-Vector3f.hh  gsv-Vector3i.hh  gsv-WgViewer3D.hh
projekt_ms/serwer-graficzny-Qt6-cmake-v1_3_1/serwer_zrodla/src/: gsv-BackgroundUtils.cpp  gsv-CommandInterpreter.cpp  gsv-Cuboid.cpp  gsv-GeomParams.cpp  gsv-GraphicsWindow.cpp  gsv-Map4DescGeomObjs.cpp  gsv-ServerCommand.cpp  gsv-WgViewer3D.cpp  main.cpp
