noinst_HEADERS= AbstractComChannel.hh \
				AbstractInterp4Command.hh \
				AbstractMobileObj.hh \
				AbstractScene.hh \
				AccessControl.hh \
				ComChannel.hh \
				Configuration.hh \
				Cuboid.hh \
				geomVector.hh \
				LibInterface.hh \
				Port.hh \
				ProgramInterpreter.hh \
				Scene.hh \
				Set4LibInterfaces.hh \
				Vector3D.hh \
				xmlinterp.hh \
				Interp4Move.hh \
				Interp4Color.hh \
				Interp4Set.hh \
				Interp4Rotate.hh \
				Interp4Scale.hh \
				Interp4Pause.hh
